tests/errors/compiler/bool_conversions/LOGAND_9029.c
int i, a, j;
void main()
{
    a = ( i < 10 && j > -i);

    assert(a == 0, "a must be 0");
}
